Cambió el titulo

--- a/principal.html
+++ b/principal.html
@@ -9,13 +9,13 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.red-indigo.min.css" />
         <link rel="stylesheet" href="estilo.css" />
-        <title>Aplicación de mercados</title>
+        <title>Adiós a las Notitas</title>
     </head>
     <body class="" data-ng-app="mercado" data-ng-controller = "mercadoController">
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
           <header class="mdl-layout__header  mdl-layout__header--waterfall">
             <div class="mdl-layout__header-row">
-              <h1 class="mdl-layout-title">Aplicación de mercados</h1>
+              <h1 class="mdl-layout-title">Adiós a las Notitas</h1>
             </div>
           </header>
         <div class="mdl-grid">
@@ -52,9 +52,9 @@
                     data-ng-click="agregarArticulo()">
                       <span class="material-icons">add</span>
                   </button>
-                  <div class="mdl-tooltip mdl-tooltip--large" for = "btnAdd">
+                  <!--<div class="mdl-tooltip mdl-tooltip--large" for = "btnAdd">
                     Guardar Artículo
-                  </div>
+                  </div>-->
               </div>
 
               <table class="mdl-data-table mdl-js-data-table mdl-shadow--4dp" style="display:flex-block;">
